MDEV-8729 Wrong result for SELECT..WHERE HEX(enum_column)='61' AND enum_column='a '